perf: optimize JVM heap, thread affinity, and sync stress test scripts
- Reduce JVM heap to 4GB and re-enable Large Pages for Gateway and Matching Engine.
- Limit Netty workers to 2 and allow Netty Boss thread to float to resolve P-core contention.
- Synchronize SINGLE_MACHINE_STRESS_TUNE.md with the latest OS tuning and script optimizations.
- Update OS configuration guide with deeper BIOS and affinity instructions.
- Add test log directory to .gitignore.